--- a/client/src/components/Landing Page/LandingPage.css
+++ b/client/src/components/Landing Page/LandingPage.css
@@ -1,20 +1,41 @@
-.LandPag {
-    text-align: center;
-    background-color: rgb(243, 233, 221);
+body {
+    background-image: url('../../imgs/BackgroundImage.png');     
+    background-size: cover;
+    font-family: "ＭＳ Ｐゴシック";
+    font-weight: 600;
 }
 
-.Title {
+.landing-page {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.title {
     display: flex;
     justify-content: center;
     text-align: center;
     margin-top: 250px;
     flex-direction:column;
-    font:bold;
+    margin-top: 100px;
+    margin-bottom: 200px;
+   
 }
 
-.Button {
-    box-sizing: content-box;
-    box-shadow: inset;
-    font-size: large;
-    border-color: blueviolet;
+.button-land {
+    background: rgba(240, 10, 10, 0.96);
+    color: rgb(255, 255, 255);
+    font-size: 30px;
+    cursor: pointer;
+    border-style: solid;
+    border-color: rgb(230, 10, 10);
+    border-radius: 4px;
+    transition: 0.5s;
+    /* margin-top: 20px; */
+
+}
+
+.button-land:hover {
+    font-size: 40px;
+    color: rgb(236, 245, 110);
 }
