--- a/client/src/components/PokemonCard/PokemonCard.css
+++ b/client/src/components/PokemonCard/PokemonCard.css
@@ -1,4 +1,124 @@
-.card {
-    border-radius: 10px;
-    border: 15px;
+
+
+.outside-card {
+    clip-path: polygon(
+        0px 30px,
+        6px 30px,
+        6px 18px,
+        12px 18px,
+        12px 12px,
+        18px 12px,
+        18px 6px,
+        24px 6px,
+        30px 6px,
+        30px 0px,
+        calc(100% - 30px) 0px,
+        calc(100% - 30px) 6px,
+        calc(100% - 18px) 6px,
+        calc(100% - 18px) 12px,
+        calc(100% - 12px) 12px,
+        calc(100% - 12px) 18px,
+        calc(100% - 6px) 18px,
+        calc(100% - 6px) 24px,
+        calc(100% - 6px) 30px,
+        100% 30px,
+        100% calc(100% - 30px),
+        calc(100% - 6px) calc(100% - 30px),
+        calc(100% - 6px) calc(100% - 18px),
+        calc(100% - 12px) calc(100% - 18px),
+        calc(100% - 12px) calc(100% - 12px),
+        calc(100% - 18px) calc(100% - 12px),
+        calc(100% - 18px) calc(100% - 6px),
+        calc(100% - 24px) calc(100% - 6px),
+        calc(100% - 30px) calc(100% - 6px),
+        calc(100% - 30px) 100%,
+        30px 100%,
+        30px calc(100% - 6px),
+        18px calc(100% - 6px),
+        18px calc(100% - 12px),
+        12px calc(100% - 12px),
+        12px calc(100% - 18px),
+        6px calc(100% - 18px),
+        6px calc(100% - 24px),
+        6px calc(100% - 30px),
+        0px calc(100% - 30px)
+      );
+    background: rgba(76, 73, 104, 0.222);
+    backdrop-filter: blur(5px);
+    padding: 2px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+
+}
+
+
+.inside-card {
+  text-align: center;
+    clip-path: polygon(
+    0px 30px,
+    6px 30px,
+    6px 18px,
+    12px 18px,
+    12px 12px,
+    18px 12px,
+    18px 6px,
+    24px 6px,
+    30px 6px,
+    30px 0px,
+    calc(100% - 30px) 0px,
+    calc(100% - 30px) 6px,
+    calc(100% - 18px) 6px,
+    calc(100% - 18px) 12px,
+    calc(100% - 12px) 12px,
+    calc(100% - 12px) 18px,
+    calc(100% - 6px) 18px,
+    calc(100% - 6px) 24px,
+    calc(100% - 6px) 30px,
+    100% 30px,
+    100% calc(100% - 30px),
+    calc(100% - 6px) calc(100% - 30px),
+    calc(100% - 6px) calc(100% - 18px),
+    calc(100% - 12px) calc(100% - 18px),
+    calc(100% - 12px) calc(100% - 12px),
+    calc(100% - 18px) calc(100% - 12px),
+    calc(100% - 18px) calc(100% - 6px),
+    calc(100% - 24px) calc(100% - 6px),
+    calc(100% - 30px) calc(100% - 6px),
+    calc(100% - 30px) 100%,
+    30px 100%,
+    30px calc(100% - 6px),
+    18px calc(100% - 6px),
+    18px calc(100% - 12px),
+    12px calc(100% - 12px),
+    12px calc(100% - 18px),
+    6px calc(100% - 18px),
+    6px calc(100% - 24px),
+    6px calc(100% - 30px),
+    0px calc(100% - 30px)
+  );
+  background: rgba(191, 167, 225, 0.396);
+backdrop-filter: blur(1px);
+padding: 8px;
+margin: 2px;
+    width: 230px;
+    height: 190px;
+    transition: 0.5s;
+}
+
+a:link {
+  text-decoration: none;
+  color: black;
+  font-size: 17px;
+}
+a:visited {
+  color: black;
+}
+
+/* .outside-card:hover{
+
+} */
+
+.inside-card:hover{
+  width: 300px;
+  height: 205px;
 }
